// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<URLMetaPreview /> should render 1`] = `
<div
  className="url-meta-preview bg-white h-100"
>
  <div
    className="row h-100"
  >
    <div
      className="col-4 pr-0"
    >
      <div
        className="w-100 h-100 bg-cover bg-center"
        data-test-id="url-meta-preview-image"
        style={
          Object {
            "backgroundImage": "url(https://ichef.bbci.co.uk/news/1024/branded_news/81C6/production/_98022233_gettyimages-842414672-1.jpg)",
          }
        }
      />
    </div>
    <div
      className="col-8 pl-0"
    >
      <div
        className="d-flex flex-column justify-content-between h-100 p-1 text-xs"
      >
        <a
          className="font-weight-bold text-dark text-truncate"
          href="https://www.bbc.co.uk/news/business-45242008"
          rel="noopener noreferrer"
          target="_blank"
        >
          National Living Wage 'fails to cover families' basic needs
        </a>
        <div
          className="font-weight-light text-gray-500 text-truncate"
          data-test-id="url-meta-preview-description"
        >
          Low-paid parents working full-time do not earn enough to meet their families' needs, a charity says.
        </div>
        <a
          className="d-block text-body text-truncate"
          data-test-id="url-meta-preview-url"
          href="https://www.bbc.co.uk/news/business-45242008"
          rel="noopener noreferrer"
          target="_blank"
        >
          bbc.co.uk/news/business-45242008
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<URLMetaPreview /> should render in vertical mode 1`] = `
<div
  className="url-meta-preview bg-white h-100"
>
  <div
    className=""
  >
    <div
      className=""
    >
      <div
        className="w-100 h-100 bg-cover bg-center"
        data-test-id="url-meta-preview-image"
        style={
          Object {
            "backgroundImage": "url(https://ichef.bbci.co.uk/news/1024/branded_news/81C6/production/_98022233_gettyimages-842414672-1.jpg)",
          }
        }
      >
        <img
          alt=""
          className="w-100"
          src="https://ichef.bbci.co.uk/news/1024/branded_news/81C6/production/_98022233_gettyimages-842414672-1.jpg"
        />
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="d-flex flex-column justify-content-between h-100 p-1 text-xs"
      >
        <a
          className="font-weight-bold text-dark text-truncate"
          href="https://www.bbc.co.uk/news/business-45242008"
          rel="noopener noreferrer"
          target="_blank"
        >
          National Living Wage 'fails to cover families' basic needs
        </a>
        <div
          className="font-weight-light text-gray-500 text-truncate"
          data-test-id="url-meta-preview-description"
        >
          Low-paid parents working full-time do not earn enough to meet their families' needs, a charity says.
        </div>
        <a
          className="d-block text-body text-truncate"
          data-test-id="url-meta-preview-url"
          href="https://www.bbc.co.uk/news/business-45242008"
          rel="noopener noreferrer"
          target="_blank"
        >
          bbc.co.uk/news/business-45242008
        </a>
      </div>
    </div>
  </div>
</div>
`;
